# fiap_datathon

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  analise_exploratoria.ipynb  analise_exploratoria_modelo.ipynb  database.db  modelo_classificacao.ipynb  pyproject.toml  swagger.yaml  test_api.py
.github/workflows/: CD.yml  CI.yaml  CI.yml
app/: applicants.py  auth.py  database.py  exceptions.py  jobs.py  main.py  ml_endpoints.py  models.py  prospects.py  schemas.py  security.py  settings.py  users.py  webscrapper.py
app/data_pipeline/: config.yml  data_cleaning.py  data_loading.py  model.py  unify_feature_engineering.py
notebooks/: EDA_VAGAS_ATUAL.ipynb  final_check.ipynb  renan.ipynb
tests/: test_users.py
